combo-55: Live chat button in 320px doesnt align well due to fixed bootstrap grid

--- a/less/style.less
+++ b/less/style.less
@@ -1122,6 +1122,16 @@ FOOTER SECTION
 		.content-right {
 			float: right;
 			margin-bottom: 20px;
+            
+            // fix for 320px to fit in viewport nicely
+            &:last-child {
+                width: auto;
+                
+                @media @phone-xxxs-max {
+                    width: 137px;
+                }
+            }
+            
 		}
 		
         @media @desktop-min {
